<resources>
    <string name="app_name">Kronos</string>
    <string name="open_nav_drawer">OPEN_NAV_BAR</string>
    <string name="close_nav_drawer">CLOSE_NAV_BAR</string>
    <string name="view_timetable">View Timetable</string>
    <string name="my_modules">My Modules</string>
    <string name="enroll_in_module">Enroll in Module</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="app_description">Student timetable assistant</string>
    <string name="manage_lecturers">Manage Lecturers</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="add_lecture">Add Lecture</string>
    <string name="duration_hours">Duration (Hours)</string>
    <string name="start_time">Start Time</string>
    <string name="date">Date</string>
    <string name="room">Room</string>
    <string name="module">Module</string>
    <string name="add_module">Add Module</string>
    <string name="lecturer">Lecturer</string>
    <string name="credit_amount">Credit Amount</string>
    <string name="module_name">Module Name</string>
    <string name="add_lecturer">Add Lecturer</string>
    <string name="add_room">Add Room</string>
    <string name="add_student">Add Student</string>
    <string name="_class">Class</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cl001">CL001</string>
    <string name="fast_track">FAST-TRACK</string>
    <string name="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et tortor at risus viverra adipiscing at. Aliquet eget sit amet tellus cras adipiscing. Et leo duis ut diam quam nulla porttitor. Arcu non odio euismod lacinia at quis risus sed. Senectus et netus et malesuada fames. Non tellus orci ac auctor augue mauris augue.</string>
    <string name="room_">Room -</string>
    <string name="lecturer_">Lecturer -</string>
    <string name="gayanga_kuruppu">Gayanga Kuruppu</string>
    <string name="name">Name</string>
    <string name="saman_gamage">Saman Gamage</string>
    <string name="email">Email</string>
    <string name="saman_email_com">saman@email.com</string>
    <string name="visiting">VISITING</string>
    <string name="lorem_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="taught_by">Taught by</string>
    <string name="laboratory">LABORATORY</string>
    <string name="lorem_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et tortor at risus viverra adipiscing at. Aliquet eget sit amet tellus cras adipiscing. Et leo duis ut diam quam nulla porttitor. Arcu non odio euismod lacinia at quis risus sed. Senectus et netus et malesuada fames. Non tellus orci ac auctor augue mauris augue.</string>
    <string name="room_id_1">ROOM-ID - 1</string>
    <string name="enroll">Enroll</string>
    <string name="lorem_4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="_15_credits">15 CREDITS</string>
    <string name="_1_fcm">[1] FCM</string>
    <string name="student_id">Student ID</string>
    <string name="lc001">LC001</string>
    <string name="lecturer_name">Lecturer Name</string>
    <string name="_11_09_2021">11-09-2021</string>
    <string name="room_1">Room-1</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="_08_30_2_hours">08:30 (2 hours)</string>
    <string name="time_and_duration">Time and Duration</string>
</resources>