<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="APPLICATION">
        <menu>
            <item android:title="@string/manage_lecturers" android:icon="@drawable/ic_baseline_supervised_user_circle_24" android:id="@+id/nav_manage_lecturers"/>
            <item android:title="Manage Modules" android:icon="@drawable/ic_baseline_book_24" android:id="@+id/nav_manage_modules"/>
            <item android:title="Manage Lectures" android:icon="@drawable/ic_baseline_menu_book_24" android:id="@+id/nav_manage_lectures"/>
        </menu>
    </item>
    <item android:title="ACCOUNT">
        <menu>
            <item android:title="@string/settings" android:icon="@drawable/ic_baseline_settings_24" android:id="@+id/nav_settings"/>
            <item android:title="@string/logout" android:icon="@drawable/ic_log_out" android:id="@+id/nav_logout"/>
        </menu>
    </item>
</menu>