<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="#00FFFFFF"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/name_id"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:padding="5dp"
            android:text="@string/_1_fcm"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/credits"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/_15_credits"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_id"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="5dp"
            android:text="@string/lorem_4"
            android:textColor="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:paddingBottom="5dp"
                android:paddingLeft="25dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_baseline_supervised_user_circle_24"
                app:tint="@color/colorIcon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:text="@string/taught_by"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/lecturer"
                android:layout_width="128dp"
                android:paddingTop="5dp"
                android:layout_height="wrap_content"
                android:text="@string/gayanga_kuruppu"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/enroll_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enroll"
                android:layout_marginTop="5dp"
                app:icon="@drawable/ic_baseline_add_box_24"
                android:layout_alignParentRight="true"
                android:textSize="12sp"
                />

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>