<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="#00FFFFFF"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingLeft="15dp"
            android:src="@drawable/ic_baseline_bookmarks_24"
            app:tint="@color/colorIcon"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="85">

            <TextView
                android:id="@+id/_id"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:padding="5dp"
                android:text="@string/module"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/module"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/software_engineering"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/_name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/_id"
                android:layout_marginLeft="15dp"
                android:padding="5dp"
                android:text="Room ID"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/room_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/_id"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/room_1"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/_date"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/_name"
                android:layout_marginLeft="15dp"
                android:padding="5dp"
                android:text="@string/date"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/_name"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/_11_09_2021"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/_time"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/_date"
                android:layout_marginLeft="15dp"
                android:padding="5dp"
                android:text="@string/time_and_duration"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/_date"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/_08_30_2_hours"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>